# precommit-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  pylintrc  pyproject.toml
