[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["", ]

[tool.poetry.dependencies]
python = "^3.11.1"
# celery = {extras = ["redis"], version = "^5.2.7"}
requests = "^2.22.0"
typer = "^0.7.0"
numpy = "^1.23.4"
pandas = "^1.5.3"

# api
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"

# CLI
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
watchfiles = "^0.18.1"
pre-commit = "^2.20.0"
mypy = "^0.991"
# celery-stubs = "^0.1.2"
types-requests = "^2.28.11.5"
# types-pillow = "^9.3.0.2"
pytest-order = "^1.0.1"
pytest-mock = "^3.10.0"

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
path = "latest/src/ latest/tests"

[tool.taskipy.tasks]
lint = "pylint -j 8 -r n {path}"
test = "pytest -s"
black = "black {path}"
isort = "isort {path}"
mypy = "mypy {path}"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
